# flask-weather-api

./: .pylintrc  LICENSE  README.md  mkdocs.yml  pyproject.toml  weather.db
.github/workflows/: ci.yml  pages.yml
app/: __init__.py  config.py  models.py  weather_routes.py
docs/: index.md
tests/: conftest.py  test_caching.py  test_favorites.py  test_mock_provider.py  test_provider.py  test_utils.py
weatherlib/: provider.py  utils.py
