[tool.poetry]
name = "flask-weather-api"
version = "0.1.0"
description = "A Flask-based Weather API"
authors = ["Meynoush Kohandani"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }, { include = "weatherlib" }]


[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
mkdocs = "^1.6.1"
black = "^25.1.0"
sqlalchemy = "^2.0.38"
pytest = "^8.3.4"
logging = "^0.4.9.6"
mocker = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
black = "^25.1.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
